# server/internal/api/oas/oas_request_encoders_gen.go
@@ -230,3 +230,17 @@ func encodeUsersUpdateRequest(
 	ht.SetBody(r, bytes.NewReader(encoded), contentType)
 	return nil
 }
+
+func encodeUsersUpdatePermissionOverridesRequest(
+	req *UpdateUserPermissionOverridesRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
